# ChangeLog for media-video/ffmpeg
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.154 2006/08/30 17:53:19 lu_zero Exp $

  30 Aug 2006; Luca Barbato <lu_zero@gentoo.org>
  ffmpeg-0.4.9_p20060816.ebuild:
  Fix multilib-strict and support EXTRA_ECONF

  17 Aug 2006; Luca Barbato <lu_zero@gentoo.org>
  ffmpeg-0.4.9_p20060816.ebuild:
  fix sdl dep

  16 Aug 2006; Luca Barbato <lu_zero@gentoo.org> ChangeLog:
  New version

  14 Aug 2006; Luca Barbato <lu_zero@gentoo.org>
  +files/ffmpeg-0.4.9_p20060530-snow-mmx.patch,
  ffmpeg-0.4.9_p20060530.ebuild:
  Make snow compile on x86 with pic and mmx enabled at the same time, many
  thanks to Martin von Gagern <Martin.vGagern@gmx.net> for the patch and the
  overall help

  12 Aug 2006; Luca Barbato <lu_zero@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  Marked ~ppc64

  12 Aug 2006; Luca Barbato <lu_zero@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  Pin x264 version to avoid build issue with snapshots too new

  01 Aug 2006; Joshua Jackson <tsunam@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  Adding ~x86 as it works and all that jazz

  31 May 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  Gave it a ~sparc

  31 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  Re-add ~x86-fbsd and ~amd64 keywords.

  31 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  Remove keywording comments, we always add and drop them every other release.

  31 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  Remove old hack for $LDFLAGS passing (fixed upstream), remove the
  append-flags (fixed upstream).

  12 Jun 2006; Luca Barbato <lu_zero@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  more files to the sed PIC

  31 May 2006; Luca Barbato <lu_zero@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  Missing patch
