@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 0.4.8-gcc3.4-magicF2W.patch 994 RMD160 4192e2537d220d4b63c55bdea36ac7f5532d8a6a SHA1 07c79c6680ebe0b1a695394ba4d24abb503c4b46 SHA256 3d359f8483903dcc876be0ee4ff511d63a8cf57fade26d58f72e4a3ec0694226
 MD5 003b0062185efcb0ea5a6115fa8a646a files/0.4.8-gcc3.4-magicF2W.patch 994
 RMD160 4192e2537d220d4b63c55bdea36ac7f5532d8a6a files/0.4.8-gcc3.4-magicF2W.patch 994
@@ -66,18 +69,18 @@ EBUILD ffmpeg-0.4.9_p20060517.ebuild 7718 RMD160 94f1ed3aaa88d7595b36c1265862bb5
 MD5 587e561ad1ae6e62cc1453690819d25c ffmpeg-0.4.9_p20060517.ebuild 7718
 RMD160 94f1ed3aaa88d7595b36c1265862bb5cb469f166 ffmpeg-0.4.9_p20060517.ebuild 7718
 SHA256 c6b9c00d45c4c630e7ad9c9f909ca29afe2065b382b43a5c580111d24fa97dab ffmpeg-0.4.9_p20060517.ebuild 7718
-EBUILD ffmpeg-0.4.9_p20060530.ebuild 7480 RMD160 8b5c660b382c03a0a55afddde34be2ca7cf8ce5e SHA1 3a797ebd1424453be3ebe3c411e36cdf99749ece SHA256 7279ee05c78a299207fe2fdc3ce33a423ab7459d705403b786160783d6e924f3
-MD5 d68e9a78b5c36844f7688528f413a1a0 ffmpeg-0.4.9_p20060530.ebuild 7480
-RMD160 8b5c660b382c03a0a55afddde34be2ca7cf8ce5e ffmpeg-0.4.9_p20060530.ebuild 7480
-SHA256 7279ee05c78a299207fe2fdc3ce33a423ab7459d705403b786160783d6e924f3 ffmpeg-0.4.9_p20060530.ebuild 7480
-EBUILD ffmpeg-0.4.9_p20060816.ebuild 5465 RMD160 f9327ca15d862239dbd576be84db05a260151763 SHA1 7e89fddf69e8ddf66a0fcaeea92e02a364b845a1 SHA256 82abcd177e37a244430cd4abe7ca7230a0886d5b08bfd8386b6af18bc83e82ba
-MD5 dc5c138a809d42b322c3e230688d125d ffmpeg-0.4.9_p20060816.ebuild 5465
-RMD160 f9327ca15d862239dbd576be84db05a260151763 ffmpeg-0.4.9_p20060816.ebuild 5465
-SHA256 82abcd177e37a244430cd4abe7ca7230a0886d5b08bfd8386b6af18bc83e82ba ffmpeg-0.4.9_p20060816.ebuild 5465
-MISC ChangeLog 23373 RMD160 504c385351d40e09a9559b9d64a69e05edca5b9f SHA1 8b613d5f694709bda6c68df913f0372f78682b71 SHA256 91750fb71092ddd715d6d41d50b233f29d2950778ca2125b3bf43bf49b187fa9
-MD5 be19628ff4788227b70747f11601ff1e ChangeLog 23373
-RMD160 504c385351d40e09a9559b9d64a69e05edca5b9f ChangeLog 23373
-SHA256 91750fb71092ddd715d6d41d50b233f29d2950778ca2125b3bf43bf49b187fa9 ChangeLog 23373
+EBUILD ffmpeg-0.4.9_p20060530.ebuild 7517 RMD160 0caf7efa2b89ba93fa58b4403b479cd2a0434927 SHA1 47c4a3eb432c9ed3f86fd50744e29f1815312f29 SHA256 88f06580e2836dd3d4c78479a90261554e394c0db15ac4fa0e5d1ef929370a3a
+MD5 84e184b351b93bfcd3e407c2be4ca83d ffmpeg-0.4.9_p20060530.ebuild 7517
+RMD160 0caf7efa2b89ba93fa58b4403b479cd2a0434927 ffmpeg-0.4.9_p20060530.ebuild 7517
+SHA256 88f06580e2836dd3d4c78479a90261554e394c0db15ac4fa0e5d1ef929370a3a ffmpeg-0.4.9_p20060530.ebuild 7517
+EBUILD ffmpeg-0.4.9_p20060816.ebuild 5469 RMD160 f9c4e3b361c375bfc053914d6beb7b53e9151726 SHA1 4f63acd1acc40c18ff34df1fe922bcacfa0cac2a SHA256 5e6fffea2f2752d07eda4c99672d0b439b8c3c7bd267c08229dee8526f2574e6
+MD5 7ad18ba12b987ac3691bf89dd82de120 ffmpeg-0.4.9_p20060816.ebuild 5469
+RMD160 f9c4e3b361c375bfc053914d6beb7b53e9151726 ffmpeg-0.4.9_p20060816.ebuild 5469
+SHA256 5e6fffea2f2752d07eda4c99672d0b439b8c3c7bd267c08229dee8526f2574e6 ffmpeg-0.4.9_p20060816.ebuild 5469
+MISC ChangeLog 23605 RMD160 f6bd60ce11b85d903ace2ce436b7ba024d841b00 SHA1 37c078fd49aac6bb9b91d54929aa20584855c799 SHA256 40a0fd25fe42ccbdec7a0d3ec230246029787f11d2da52bf476c42bd2bf56a22
+MD5 800d703153ca12a64a24ea02c77aaa40 ChangeLog 23605
+RMD160 f6bd60ce11b85d903ace2ce436b7ba024d841b00 ChangeLog 23605
+SHA256 40a0fd25fe42ccbdec7a0d3ec230246029787f11d2da52bf476c42bd2bf56a22 ChangeLog 23605
 MISC metadata.xml 223 RMD160 86b42c49b694db39ddb3fdc60b98a3ad1a0c3392 SHA1 ea8c387229caaf4b0d3c9fbef9143b70dcae0b0d SHA256 dd48e823ec9a151bc3611121402ed26ee24eb3304aa62870b1e875a8fa0ac812
 MD5 0338bfb24d7bfb6450aac4dd025c0096 metadata.xml 223
 RMD160 86b42c49b694db39ddb3fdc60b98a3ad1a0c3392 metadata.xml 223
@@ -100,3 +103,10 @@ SHA256 d12a59bb4e7e8e541a7937bc8e1539aab908413d08cbec1e512409a8a5a8b2ba files/di
 MD5 bdca759e57e38140aa6da950d6deddf0 files/digest-ffmpeg-0.4.9_p20060816 714
 RMD160 d1797b594b73fba6e86db2efe54d392cba264c0b files/digest-ffmpeg-0.4.9_p20060816 714
 SHA256 6e4c216acd8fe5eaf285520dadd383855613b7b324d65c31d592ad0b5b70fa81 files/digest-ffmpeg-0.4.9_p20060816 714
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFE/JkQAiZjviIA2XgRAu87AJsF/M8BGe2aesL9Psk9JrzlwkP4xACdGD3o
+17Tnif+YPgpOK/43sT+MbSk=
+=YpgE
+-----END PGP SIGNATURE-----
