@@ -1,6 +1,11 @@
 # ChangeLog for media-video/ffmpeg
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.154 2006/08/30 17:53:19 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.155 2006/09/04 21:22:15 flameeyes Exp $
+
+  04 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
+  ffmpeg-0.4.9_p20060530.ebuild, ffmpeg-0.4.9_p20060816.ebuild:
+  Export true as LDCONFIG value during install phases, so that it does not
+  trigger sandbox on Gentoo/FreeBSD.
 
   30 Aug 2006; Luca Barbato <lu_zero@gentoo.org>
   ffmpeg-0.4.9_p20060816.ebuild:
